# aperture

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  README.md  SECURITY.md  TESTING.md  cliff.toml  deny.toml  fix_tests.sh  flake.nix  sgconfig.yml
.ast-grep/shared-rules/rust/core/: max-nesting-depth.yml  no-nested-if.yml
.ast-grep/shared-rules/rust/optional/: no-println.yml  no-unsafe.yml
.ast-grep/shared-rules/rust/strict/: no-unwrap.yml
.ast-grep/tests/: max-nesting-depth.yml  no-nested-if.yml  no-unsafe.yml
.ast-grep/tests/__snapshots__/: max-nesting-depth-snapshot.yml  no-nested-if-snapshot.yml  no-unsafe-snapshot.yml
.cargo/: config.toml
.config/: nextest.toml
.github/hooks/: commit-msg  pre-commit
.github/workflows/: binary-size.yml  ci.yml  release-binaries.yml  release.yml
docs/: agent-integration.md  architecture.md  binary-size-optimization.md  binary-sizes.json  cli-naming.md  code_review_v0.1.md  configuration.md  core_enhancement_roadmap_v0.1.x.md  debugging.md  guide.md  phase3_features.md  plan.md  security.md
docs/adr/: 001-dynamic-command-generation-string-lifetimes.md  002-http-request-executor-design.md  003-test-isolation-base-url-configuration.md  004-per-api-base-url-configuration.md  005-security-authentication-and-custom-headers.md  006-partial-spec-acceptance-strict-flag.md  007-test-suite-performance-optimization.md  008-cache-authenticated-request-policy.md  009-custom-command-mapping.md  010-dependent-batch-workflows.md  ADR-004-test-suite-performance-optimization.md
docs/archive/: README.md  code_review_v0.1.md  core_enhancement_roadmap_v0.1.x.md  future_improvements_v0.1.md  phase3_features.md  plan.md
docs/plans/: issue-58-request-response-logging.md
scripts/: commit-msg-lint.sh  release.sh  test-fast.sh
src/: agent.rs  atomic.rs  batch.rs  cli.rs  command_guidance.rs  constants.rs  discovery_style.rs  docs.rs  duration.rs  error.rs  fs.rs  interactive.rs  invocation.rs  lib.rs  logging.rs  main.rs  output.rs  pagination.rs  response_cache.rs  search.rs  shortcuts.rs  suggestions.rs  utils.rs
src/batch/: capture.rs  graph.rs  interpolation.rs  mod.rs
src/cache/: fingerprint.rs  metadata.rs  mod.rs  models.rs
src/cli/: errors.rs  legacy_execute.rs  mod.rs  render.rs  tracing_init.rs  translate.rs
src/cli/commands/: api.rs  completion.rs  config.rs  docs.rs  mod.rs  search.rs
src/config/: context_name.rs  manager.rs  mapping.rs  mod.rs  models.rs  server_variable_resolver.rs  settings.rs  url_resolver.rs
src/engine/: executor.rs  generator.rs  loader.rs  mod.rs
src/interactive/: mock.rs  mod.rs
src/resilience/: mod.rs
src/spec/: mod.rs  parser.rs  transformer.rs  validator.rs
tests/: agent_manifest_tests.rs  api_context_landing_integration_tests.rs  atomic_io_tests.rs  auth_priority_functional_tests.rs  base_url_integration_tests.rs  batch_dependent_workflow_tests.rs  batch_processing_integration_tests.rs  boolean_header_parameters_tests.rs  boolean_parameters_positional_mode_tests.rs  boolean_parameters_tests.rs  cache_fingerprint_tests.rs  cache_models_tests.rs  cli_naming_integration_tests.rs  cli_render_tests.rs  cli_tests.rs  cli_translate_tests.rs  command_mapping_tests.rs  command_syntax_integration_tests.rs  common_tests.rs  completion_integration_tests.rs  config_manager_tests.rs  config_models_tests.rs  config_secrets_integration_tests.rs  config_settings_integration_tests.rs  content_type_validation_tests.rs  context_name_integration_tests.rs  context_name_tests.rs  custom_auth_integration_tests.rs  custom_http_schemes_tests.rs  discovery_structured_output_integration_tests.rs  docs_tests.rs  dynamic_help_examples_integration_tests.rs  engine_executor_tests.rs  engine_generator_tests.rs  engine_loader_tests.rs  error_suggestions_tests.rs  error_tests.rs  executor_domain_tests.rs  experimental_flags_tests.rs  fs_tests.rs  (+27 more)
tests/common/: mod.rs
tests/fixtures/openapi/: api-key-with-extension.yaml  bearer-auth-with-extension.yaml  multiple-schemes-with-extensions.json  spec-with-multipart.yaml
