[package]
name = "aperture"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
bincode = "1.3.3"
clap = { version = "4.5.40", features = ["derive"] }
openapiv3 = "1.0.0"
reqwest = { version = "0.12.20", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
shellexpand = "3.1.1"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
dirs = "5.0.1"
toml = "0.8.23"
urlencoding = "2.1.3"

[dev-dependencies]
assert_cmd = "2.0.17"
wiremock = "0.6.4"
aperture = { path = "." }
predicates = "3.1.3"
tempfile = "3.15.0"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["rt", "macros", "test-util"] }

[lints.clippy]
pedantic = "warn"
nursery = "warn"
