[package]
name = "aperture-cli"
version = "0.1.4"
edition = "2021"
description = "Dynamic CLI generator for OpenAPI specifications"
license = "MIT"
repository = "https://github.com/kioku/aperture"
homepage = "https://github.com/kioku/aperture"
documentation = "https://github.com/kioku/aperture"
keywords = ["api", "cli", "openapi", "agent", "automation"]
categories = ["command-line-utilities", "web-programming", "api-bindings"]
authors = ["Claudiu Ivan <contact@claudiu-ivan.com>"]
readme = "README.md"

[[bin]]
name = "aperture"
path = "src/main.rs"

[dependencies]
ahash = { version = "0.8.12", optional = true }
anyhow = "1.0.98"
bincode = "1.3.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
jaq-interpret = { version = "1.5.0", optional = true }
jaq-parse = { version = "1.0.3", optional = true }
jaq-std = { version = "1.6.0", optional = true }
openapiv3 = "2.2.0"
reqwest = { version = "0.12.21", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
shellexpand = "3.1.1"
tabled = "0.15.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
dirs = "6.0.0"
base64 = "0.22.1"
fastrand = "2.3.0"
governor = "0.6.3"
indexmap = "2.2.1"
sha2 = "0.10.8"
toml = "0.8.23"
urlencoding = "2.1.3"

[features]
default = []
jq = ["jaq-interpret", "jaq-parse", "jaq-std", "ahash"]

[dev-dependencies]
assert_cmd = "2.0.17"
wiremock = "0.6.4"
aperture-cli = { path = "." }
predicates = "3.1.3"
tempfile = "3.15.0"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["rt", "macros", "test-util"] }
mockall = "0.11"

[lints.clippy]
pedantic = "warn"
nursery = "warn"

# Simple release configuration
[package.metadata.release]
# Publish to crates.io
publish = true
# Create and push git tags
tag = true
push = true
