[package]
name = "aperture-cli"
version = "0.1.7"
edition = "2021"
description = "Dynamic CLI generator for OpenAPI specifications"
license = "MIT"
repository = "https://github.com/kioku/aperture"
homepage = "https://github.com/kioku/aperture"
documentation = "https://github.com/kioku/aperture"
keywords = ["api", "cli", "openapi", "agent", "automation"]
categories = ["command-line-utilities", "web-programming", "api-bindings"]
authors = ["Claudiu Ivan <contact@claudiu-ivan.com>"]
readme = "README.md"

[[bin]]
name = "aperture"
path = "src/main.rs"

[dependencies]
ahash = { version = "0.8.12", optional = true }
anyhow = "1.0.100"
bincode = "1.3.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
jaq-core = { version = "2.2.1", optional = true }
jaq-json = { version = "1.1.3", features = ["serde_json"], optional = true }
jaq-std = { version = "2.1.2", optional = true }
oas3 = { version = "0.17", features = ["yaml-spec"], optional = true }
openapiv3 = "2.2.0"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
rustls = "0.23"
serde = "1.0.228"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
shellexpand = "3.1.1"
tabled = "0.15.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
dirs = "6.0.0"
base64 = "0.22.1"
fastrand = "2.3.0"
fuzzy-matcher = "0.3.7"
governor = "0.6.3"
httpdate = "1.0"
indexmap = "2.2.1"
sha2 = "0.10.8"
toml = "0.9"
toml_edit = "0.22"
urlencoding = "2.1.3"

[features]
default = []
jq = ["jaq-core", "jaq-json", "jaq-std", "ahash"]
openapi31 = ["oas3"]
integration = []

[dev-dependencies]
assert_cmd = "2.1.2"
ctor = "0.6.3"
wiremock = "0.6.5"
aperture-cli = { path = "." }
predicates = "3.1.3"
tempfile = "3.24.0"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt", "macros", "test-util"] }
mockall = "0.13"
once_cell = "1.21.3"

[profile.release]
strip = true          # Strip symbols
opt-level = "z"       # Optimize for size over speed
lto = "fat"          # Link-time optimization
codegen-units = 1    # Single codegen unit
panic = "abort"      # Smaller panic handler

# Minimal size profile - smallest possible binary
[profile.minimal]
inherits = "release"
opt-level = "z"
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"

# Balanced size/performance profile
[profile.size-optimized]
inherits = "release"
opt-level = "s"      # Balance size/speed
strip = true
lto = "thin"         # Faster LTO
codegen-units = 1
panic = "abort"

[lints.clippy]
pedantic = "warn"
nursery = "warn"

# cargo-binstall configuration for pre-built binary downloads
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/aperture-v{ version }-{ target }.tar.gz"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/aperture-v{ version }-{ target }.zip"
pkg-fmt = "zip"
